# zk-auth-chat

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20260106_initial.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: auth.rs  chat.rs  middleware.rs  mod.rs  state.rs
src/crypto/: mod.rs  password.rs  proof.rs  zk_circuit.rs
src/db/: messages.rs  mod.rs  models.rs  sessions.rs  users.rs
