[package]
name = "zk-auth-chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-auth-chat"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35.1", features = ["full"] }

# Zero-knowledge proofs
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"

# Cryptography
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
argon2 = "0.5.0"
rand = "0.8.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# API Layer
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "timeout", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
base64-simd = "0.8.0"
